--- a/public/index.html
+++ b/public/index.html
@@ -97,23 +97,24 @@
 			<div class="mobile-scroll" id="mobile-scroll">
 				<div id="text-section-1" class="text-section-1">
 					<h2 id="text-1">
-						millions of<br />
-						<span>dollars earned</span>
-						<p class="pic-mob">by creators selling on pickmy.link</p>
+						monetize your<br />
+						<span>presence</span>
+						<p class="pic-mob">Sell more, Earn more with ultimate earning opportunities</p>
 					</h2>
 				</div>
 				<div id="text-section-2" class="text-section-1">
 					<h2 id="text-2">
-						millions of<br />
-						<span>dollars earned</span>
-						<p class="pic-mob">by creators selling on pickmy.link</p>
+						create no code<br />
+						<span>microsite</span>
+						<p class="pic-mob">Build microsite in minutes, share your content in
+							countless ways.</p>
 					</h2>
 				</div>
 				<div id="text-section-3" class="text-section-1">
 					<h2 id="text-3">
-						millions of<br />
-						<span>dollars earned</span>
-						<p class="pic-mob">by creators selling on pickmy.link</p>
+						Build Community<br />
+						<span>across socials</span>
+						<p class="pic-mob">Make it easy for your followers to find and engage with you.</p>
 					</h2>
 				</div>
 			</div>
@@ -144,7 +145,7 @@
 					<section
 						class="section section--large flex-col flex-shrink-0 vw-100 vh-100 d-flex justify-content-center align-items-center active"
 					>
-						<h2>Build Community <br /><span>across socials</span></h2>
+						<h2>Build Community<br /><span>across socials</span></h2>
 						<p>Make it easy for your followers to find and engage with you.</p>
 					</section>
 				</div>
