--- a/public/index.html
+++ b/public/index.html
@@ -99,22 +99,27 @@
 					<h2 id="text-1">
 						monetize your<br />
 						<span>presence</span>
-						<p class="pic-mob">Sell more, Earn more with ultimate earning opportunities</p>
+						<p class="pic-mob">
+							Sell more, Earn more with ultimate earning opportunities
+						</p>
 					</h2>
 				</div>
 				<div id="text-section-2" class="text-section-1">
 					<h2 id="text-2">
 						create no code<br />
 						<span>microsite</span>
-						<p class="pic-mob">Build microsite in minutes, share your content in
-							countless ways.</p>
+						<p class="pic-mob">
+							Build microsite in minutes, share your content in countless ways.
+						</p>
 					</h2>
 				</div>
 				<div id="text-section-3" class="text-section-1">
 					<h2 id="text-3">
 						Build Community<br />
 						<span>across socials</span>
-						<p class="pic-mob">Make it easy for your followers to find and engage with you.</p>
+						<p class="pic-mob">
+							Make it easy for your followers to find and engage with you.
+						</p>
 					</h2>
 				</div>
 			</div>
@@ -138,8 +143,7 @@
 							<!-- build your<br> <span>community</span>  -->
 						</h2>
 						<p>
-							Build microsite in minutes, share your content in
-							countless ways.
+							Build microsite in minutes, share your content in countless ways.
 						</p>
 					</section>
 					<section
@@ -151,9 +155,9 @@
 				</div>
 			</div>
 		</div>
-
+		
 		<!-- Dropdown image section -->
-		<div class="land-influ">
+		<div class="land-influ" id="drop-section">
 			<div class="land-vlog">
 				<div class="land-a">
 					<div class="row1">
