modified design issues issues

--- a/public/index.html
+++ b/public/index.html
@@ -902,7 +902,6 @@
 						<img id="image" alt="image" />
 					</div> -->
 					<div class="vloger-activeimg">
-
 						<img class="image image--1 active"
 							src="./images/foodie_links.png">
 						<img class="image image--2"
@@ -913,6 +912,15 @@
 				</div>
 			</div>
 			<div class="locker__content">
+				<div class="vloger-head">
+					<span>I am a</span>
+					<div class="influ-dropsec">
+						<div id="mainDiv" class="influ-vlog">DIV</div>
+						<img src="./images/arrow_drop.svg" id="drop-down-arrow" />
+					</div>
+					<div id="child" class="infludrop-btn"></div>
+				</div>
+
 				<div class="locker__section locker__section--1 cb" data-swap="image--1">
 					<h3>01</h3>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
