--- a/public/index.html
+++ b/public/index.html
@@ -154,87 +154,6 @@
 			</div>
 		</div>
 
-		<!-- Dropdown image section -->
-		<div class="land-influ" id="drop-section">
-			<div class="land-vlog">
-				<div class="land-a">
-					<div class="row1">
-						<div class="row2" id="scroll-app">
-							<div class="vloger-head" id="stickey-head">
-								<span>I am a</span>
-								<!-- <button>vlogger</button> -->
-								<div class="influ-dropsec">
-									<div id="mainDiv" class="influ-vlog">DIV</div>
-									<img src="./images/arrow_drop.svg" id="drop-down-arrow" />
-								</div>
-								<div id="child" class="infludrop-btn"></div>
-							</div>
-
-							<p class="vloger-choi" id="influencer-list"></p>
-
-							<div class="land-lin" id="profile-link">
-								<span>Profile Links</span>
-								<p id="profile-li">
-									<!-- Duis aute irure dolor in reprehenderit in voluptate velit esse
-									cillum dolore eu fugiat nulla pariatur. Excepteur sint
-									occaecat cupidatat non proident. -->
-								</p>
-							</div>
-							<div class="land-lin mobile2" id="brand-collaboration">
-								<span>Brand Collaboration</span>
-								<p id="brand-collab">
-									<!-- Duis aute irure dolor in reprehenderit in voluptate velit esse
-									cillum dolore eu fugiat nulla pariatur. Excepteur sint
-									occaecat cupidatat non proident. -->
-								</p>
-							</div>
-						</div>
-
-						<!--  -->
-						<!-- <div class="land-vloger mobile-off" id="land-change">
-							<iframe
-								class="code"
-								src="./canvas.html"
-								allow="fullscreen"
-								webkitallowfullscreen="true"
-								mozallowfullscreen="true"
-								allowfullscreen="true"
-								webkit-playsinline="true"
-								scrolling="no"
-								frameborder="0"></iframe>
-							<div class="test-vloger">
-								<img id="image" alt="image" />
-							</div>
-						</div> -->
-					</div>
-					<div class="land-lin mobile" id="brand-collaboration">
-						<span>Brand Collaboration</span>
-						<p id="brand-mobile">
-							<!-- Duis aute irure dolor in reprehenderit in voluptate velit esse
-							cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-							cupidatat non proident. -->
-						</p>
-					</div>
-				</div>
-
-				<!--  -->
-				<div class="land-vloger mobile-vloger" id="land-mobile">
-					<iframe
-						class="code"
-						src="./canvas2.html"
-						allow="fullscreen"
-						webkitallowfullscreen="true"
-						mozallowfullscreen="true"
-						allowfullscreen="true"
-						webkit-playsinline="true"
-						scrolling="no"
-						frameborder="0"></iframe>
-					<div class="test-vloger">
-						<img id="mv-image" alt="image" />
-					</div>
-				</div>
-			</div>
-		</div>
 
 		<!-- Progress bar section -->
 		<div class="earn-section">
@@ -915,11 +834,12 @@
 				<div class="vloger-head">
 					<span>I am a</span>
 					<div class="influ-dropsec">
-						<div id="mainDiv" class="influ-vlog">DIV</div>
+						<div id="mainDiv" class="influ-vlog"></div>
 						<img src="./images/arrow_drop.svg" id="drop-down-arrow" />
 					</div>
 					<div id="child" class="infludrop-btn"></div>
 				</div>
+				<p class="vloger-choi" id="influencer-list">dkfjghkji</p>
 
 				<div class="locker__section locker__section--1 cb" data-swap="image--1">
 					<h3>01</h3>
