modified design changes

--- a/public/index.html
+++ b/public/index.html
@@ -807,6 +807,7 @@
 				<div class="locker__container">
 					<div class="land-vloger">
 						<iframe
+						id="land-change"
 							class="code"
 							src="./canvas.html"
 							allow="fullscreen"
@@ -821,11 +822,11 @@
 						<img id="image" alt="image" />
 					</div> -->
 					<div class="vloger-activeimg">
-						<img class="image image--1 active"
+						<img class="image image--1 active" id="image1"
 							src="./images/foodie_links.png">
-						<img class="image image--2"
+						<img class="image image--2" id="image2"
 							src="./images/foodie_brand.png">
-						<img class="image image--3"
+						<img class="image image--3" id="image3"
 							src="./images/gamer_links.png">
 					</div>
 				</div>
@@ -839,40 +840,23 @@
 					</div>
 					<div id="child" class="infludrop-btn"></div>
 				</div>
-				<p class="vloger-choi" id="influencer-list">dkfjghkji</p>
+				<p class="vloger-choi" id="influencer-list"></p>
 
 				<div class="locker__section locker__section--1 cb" data-swap="image--1">
-					<h3>01</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-						veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-						commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-						velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-						cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
-						est laborum.</p>
+					<h3>Profile Links</h3>
+					<p id="profile-li"></p>
 				</div>
 				<div class="locker__section locker__section--2 cb" data-swap="image--2">
-					<h3>02</h3>
-					<p class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-						eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-						minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-						ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-						velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-						cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
-						est laborum.</p>
+					<h3>Brand Collaboration
+					</h3>
+					<p class="" id="brand-collab"></p>
 				</div>
 				<div class="locker__section locker__section--3 cb" data-swap="image--3">
-					<h3>03</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-						veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-						commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-						velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-						cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
-						est laborum.</p>
+					<h3>Affiliate Marketing</h3>
+					<p id="affiliate-content"></p>
 				</div>
 			</div>
-			<div class="threshold threshold--top"></div>
+			<!-- <div class="threshold threshold--top"></div> -->
 		</div>
 		<div class="text">
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
@@ -882,33 +866,6 @@
 				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
 				non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 		</div>
-
-
-		<script id="rendered-js">
-  if (typeof window.IntersectionObserver !== 'undefined') {
-	let options = {
-	  threshold: [0.5, 1] };
-  
-	const targets = document.querySelectorAll('.cb');
-	const locker = document.querySelector('.locker__container');
-	function handleIntersection(entries) {
-	  entries.map(entry => {
-		if (entry.isIntersecting) {
-		  entry.target.current = entry.target.dataset.swap;
-		  document.querySelector(".locker__container ." + entry.target.current).classList.add("active");
-		} else {
-		  document.querySelector(".locker__container ." + entry.target.current).classList.remove("active");
-		}
-	  });
-	}
-	const observer = new IntersectionObserver(handleIntersection, options);
-	targets.forEach(target => observer.observe(target));
-  } else {
-	// Fallback
-  }
-  //# sourceURL=pen.js
-	  </script>
-		<!-- sdknkbgsv -->
 
 
 
