canvas bg change

--- a/public/index.html
+++ b/public/index.html
@@ -803,7 +803,7 @@
 		</div>
 		<!-- kjxfntgkj -->
 		<div class="locker">
-			<div class="locker__image">
+			<div class="locker__image" id="locker_image">
 				<div class="locker__container">
 					<div class="land-vloger">
 						<iframe
@@ -818,9 +818,6 @@
 							scrolling="no"
 							frameborder="0"></iframe>
 					</div>
-					<!-- <div class="test-vloger">
-						<img id="image" alt="image" />
-					</div> -->
 					<div class="vloger-activeimg">
 						<img class="image image--1 active" id="image1"
 							src="./images/foodie_links.png">
@@ -841,31 +838,52 @@
 					<div id="child" class="infludrop-btn"></div>
 				</div>
 				<p class="vloger-choi" id="influencer-list"></p>
-
 				<div class="locker__section locker__section--1 cb" data-swap="image--1">
 					<h3>Profile Links</h3>
 					<p id="profile-li"></p>
+					<div class="cate-mobile mobile-vloger" 
+					id="canvas-mob1"
+					
+					>
+						<iframe
+							class="code"
+							src="./canvas2.html"
+							allow="fullscreen"
+							webkitallowfullscreen="true"
+							mozallowfullscreen="true"
+							allowfullscreen="true"
+							webkit-playsinline="true"
+							scrolling="no"
+							frameborder="0"></iframe>
+						<img id="mob-img1" src="./images/foodie_links.png" alt="">
+					</div>
 				</div>
 				<div class="locker__section locker__section--2 cb" data-swap="image--2">
 					<h3>Brand Collaboration
 					</h3>
 					<p class="" id="brand-collab"></p>
+					<div class="cate-mobile">
+						<img id="mob-img2" src="./images/foodie_brand.png" alt="">
+					</div>
 				</div>
 				<div class="locker__section locker__section--3 cb" data-swap="image--3">
 					<h3>Affiliate Marketing</h3>
 					<p id="affiliate-content"></p>
+					<div class="cate-mobile">
+						<img id="mob-img3" src="./images/foodie_links.png" alt="">
+					</div>
 				</div>
 			</div>
 			<!-- <div class="threshold threshold--top"></div> -->
 		</div>
-		<div class="text">
+		<!-- <div class="text">
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
 				non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-		</div>
+		</div> -->
 
 
 
