--- a/public/index.html
+++ b/public/index.html
@@ -813,6 +813,78 @@
 				</div>
 			</div>
 		</div>
+       <!-- pricing page -->
+		<div class="pricing-container">
+			<h3>Utilizing pickmy.link  <span class="incur">incurs 0$</span> in expenses.</h3>
+			<p class="title">Free to use! No charges apply for our product. Enjoy unlimited access without spending a dime. Embrace innovation, no strings attached!</p>
+			<div class="apps">
+			<div class="app-container">
+				<div class="apps-info">
+				<div class="inner-container">
+				<div class="useflex">
+						<a href="https://app.pickmyad.com/auth/signup"> <img src="images/logoDark.svg" alt="pickmyad" /></a>
+				</div>
+				<div class="useflex">
+					<p>Brand Collaboration</p>
+					<span class="desktop"> <span class="perc">10%</span> Free</span>
+					<span class="mobile"> Free <span class="perc">10%</span></span>
+				</div>
+				<div class="useflex">
+					<p>Link-to-bio</p>
+					<span>0$/m</span>
+				</div>
+				<div class="useflex">
+					<p>Affiliate Store</p>
+					<span>0$/m</span>
+				</div>
+				<div class="useflex">
+					<p class="dektop-txt">VCard (Virtual Business Card)</p>
+					<div class="mobile-vcard">
+					<p class="mobile-txt">VCard</p>
+					<p class="mobile-txt">(Virtual Business Card)</p>
+					</div>
+
+					<span>0$/m</span>
+				</div>
+				<div class="useflex">
+					<p>Ask Me</p>
+					<span>0$/m</span>
+				</div>
+				</div>
+				<div class="bottom-btn">
+					<p class="total">Total</p>
+					<span>0$/m</span>
+				</div>
+				<a href="https://app.pickmyad.com/auth/signup" class="grab-linkBtn">Grab your link for free</a>
+				</div>
+			</div>
+			<div class="app-container2">
+			<div class="app-pricing">
+				<div class="others">
+				Other
+				</div>
+				<div class="useflex">
+					<p>5-399$/m</p>
+				</div>
+				<div class="useflex">
+					<p>5-25$/m</p>
+				</div>
+				<div class="useflex">
+					<p>0-10$/m</p>
+				</div>
+				<div class="useflex">
+					<p>0-4$/m</p>
+				</div>
+				<div class="useflex">
+					<p>1-49.9$/m</p>
+				</div>
+			</div>
+			<div class="bottom-btn1">
+				<p>100-400$/m</p>
+			</div>
+			</div>
+			</div>
+		</div>
 
 		<!-- Faq section -->
 		<div class="lan-asked">
